# surrogate-index-simulations

./: .gitignore  pyproject.toml
coverage_analysis/: GEMINI.md  pyproject.toml  surrogate_index_variance.ipynb
presentation/: README.md  sim_presentation.ipynb
presentation/media/videos/presentation/720p30/partial_movie_files/Scene/: partial_movie_file_list.txt
presentation/simulations/: comparability_simulation_1.ipynb  surrogacy_simulation_2.ipynb
simulations/: comparability_simulation_1.ipynb  comparability_simulation_2.ipynb  comparability_simulation_3.ipynb  comparability_simulation_4.ipynb  comparability_simulation_5.ipynb  comparability_simulation_6_explain.ipynb  initial_simulation.ipynb  surrogacy_simulation_1.ipynb  surrogacy_simulation_15.ipynb  surrogacy_simulation_1_0.ipynb  surrogacy_simulation_1_1.ipynb  surrogacy_simulation_2.ipynb
simulations/archive/: comparability_simulation_7.ipynb  surrogacy_simulation_1_0 copy.ipynb  surrogacy_simulation_2 copy.ipynb
simulations/new/: step_by_step.ipynb
