[project]
name = "surrogate-indices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipython>=9.12.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tabulate>=0.10.0",
    "tqdm>=4.67.3",
]
